// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table editor plugins.renderNode renders a Table when passed 1`] = `
<Table
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Table",
    }
  }
/>
`;

exports[`Table editor plugins.renderNode renders a cell when passed 1`] = `
<Cell
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Table.Cell",
    }
  }
/>
`;

exports[`Table editor plugins.renderNode renders a row when passed 1`] = `
<Row
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Table.Row",
    }
  }
/>
`;
